--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./reset.css" />
   </head>
   <body>
     <nav>
-      <img src="/poto/Frame 2.svg" alt="logo" class="img navbar" />
+      <img src="./poto/Frame 2.svg" alt="logo" class="img navbar" />
       <ul class="menu">
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
@@ -26,15 +26,13 @@
             <p class="intro">Hi Everyone, I am</p>
           <h1 class="name">Fathir Akbar</h1>
           <p class="description">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-            voluptate alias. Eos velit quasi harum nemo est nostrum hic
-            laudantium.
+            I am a Computer Science graduate with a strong interest in software development and cybersecurity. During my studies, I actively participated in various coding projects and hackathons and gained internship experience as a Junior Developer. I am proficient in Python, SQL, and computer network concepts. I am a fast learner, analytical, and enthusiastic about exploring the latest technologies.
           </p>
           <button class="download-btn">
             Download CV <span class="icon">⭳</span>
           </button>
           </div>
-          <img src="/poto/Suit Man _ Gong Yoo _ Squid Game 2 🐙.jpg" alt="Samsul Basuri" />
+          <img src="./poto/Suit Man _ Gong Yoo _ Squid Game 2 🐙.jpg" alt="Samsul Basuri" />
         </div>
           
     </main>
